Challenge code finalized

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               </div>
             </div>
           </div>
+          <!--creating search boxes for each Key Value in data.js-->
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-3">
@@ -52,12 +53,12 @@
                   <ul class="list-group bg-dark">
                     <li class="list-group-item bg-dark">
                       <label for="date">Enter Date</label>
-                      <input type="text" placeholder="1/10/2010" id="datetime" class="form-control"/>   
+                      <input type="text" placeholder="1/10/2010" id="datetime" class="form-control" />   
                     </li>
       
                     <li class="list-group-item bg-dark">
                       <label for="city">Enter a City</label>
-                      <input type="text" placeholder="roswell" id="city" class="form-control"/>   
+                      <input type="text" placeholder="roswell" id="city" class="form-control" />   <!--can insert "required" outside of quotes for class = form-control  to make it mandatory field-->
                     </li>
       
                     <li class="list-group-item bg-dark">
@@ -77,6 +78,7 @@
 
                   </ul>
               </div>
+              <!--constructing the table-->
               <div class="col-md-9">
                   <table class="table table-striped">
                     <thead>
